[package]
name = "bevy-pong"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_dylib = "0.13.2"
bevy = { version = "0.13.2", features = [
	"dynamic_linking"
]}

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
